Fix text shift issue for html2canvas

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -16,6 +16,11 @@
   #root > * {
     flex-shrink: 0;
   }
+
+  /* Prevent html2canvas from shifting texts lower on render */
+  img {
+    @apply inline-block;
+  }
 }
 
 @layer utilities {
